--- a/notebooks/ImagePatches.ipynb
+++ b/notebooks/ImagePatches.ipynb
@@ -1819,7 +1819,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max persistence index {}, peristence {} 40 2.4123587608337402\n"
+      "Max persistence index 40, peristence 2.4123587608337402\n"
      ]
     },
     {
@@ -2628,7 +2628,7 @@
     "# Find the index with greatest persistence in H1 and use\n",
     "# the cocycle corresponding to that\n",
     "idx = np.argmax(h1[:, 1]-h1[:, 0])\n",
-    "print(\"Max persistence index {}, peristence {}\", idx, h1[idx, 1]-h1[idx, 0])\n",
+    "print(\"Max persistence index {}, peristence {}\".format(idx, h1[idx, 1]-h1[idx, 0]))\n",
     "res = proj.get_coordinates(proj_dim=2, perc=0.9, cocycle_idx=[idx])\n",
     "X = res['X']\n",
     "idx = getGreedyPerm(X, 400)['perm']\n",
