Coming up with a slow solution to plot image patches interactively

--- a/notebooks/ImagePatches.ipynb
+++ b/notebooks/ImagePatches.ipynb
@@ -961,6 +961,19 @@
    ],
    "source": [
     "def getLinePatches(dim, NAngles, NOffsets, sigma):\n",
+    "    \"\"\"\n",
+    "    Sample a set of line segments, as witnessed by square patches\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    dim: int\n",
+    "        Patches will be dim x dim\n",
+    "    NAngles: int\n",
+    "        Number of angles to sweep between 0 and pi\n",
+    "    NOffsets: int\n",
+    "        Number of offsets to sweep from the origin to the edge of the patch\n",
+    "    sigma: float\n",
+    "        The blur parameter.  Higher sigma is more blur\n",
+    "    \"\"\"\n",
     "    N = NAngles*NOffsets\n",
     "    P = np.zeros((N, dim*dim))\n",
     "    thetas = np.linspace(0, np.pi, NAngles+1)[0:NAngles]\n",
