Fixing axis label bug and adding 3 link joint circular coordinate example

--- a/notebooks/Circular_JointPlots.ipynb
+++ b/notebooks/Circular_JointPlots.ipynb
@@ -42,6 +42,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.savefig(\"Torus2.svg\", bbox_inches='tight')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,6 +97,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 3: 3 Links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sample two noisy circles\n",
+    "prime = 41\n",
+    "np.random.seed(0)\n",
+    "N = 500\n",
+    "X = np.zeros((N*3, 3))\n",
+    "t = np.linspace(0, 1, N+1)[0:N]**1.2\n",
+    "t = 2*np.pi*t\n",
+    "X[0:N, 0] = 2*np.cos(t)\n",
+    "X[0:N, 1] = 2*np.sin(t)\n",
+    "X[N:2*N, 1] = 4*np.cos(t) + 4\n",
+    "X[N:2*N, 2] = 4*np.sin(t)\n",
+    "X[2*N::, 0] = 4*np.cos(t)\n",
+    "X[2*N::, 1] = 4\n",
+    "X[2*N::, 2] = 4*np.sin(t) + 3\n",
+    "X = X + 0.2*np.random.randn(X.shape[0], 3)\n",
+    "\n",
+    "fscaled = t - np.min(t)\n",
+    "fscaled = fscaled/np.max(fscaled)\n",
+    "c = plt.get_cmap('BuGn')\n",
+    "C1 = c(np.array(np.round(fscaled*255), dtype=np.int32))[:, 0:3]\n",
+    "c = plt.get_cmap('OrRd')\n",
+    "C2 = c(np.array(np.round(fscaled*255), dtype=np.int32))[:, 0:3]\n",
+    "c = plt.get_cmap('BuPu')\n",
+    "C3 = c(np.array(np.round(fscaled*255), dtype=np.int32))[:, 0:3]\n",
+    "C = np.concatenate((C1, C2, C3), axis=0)\n",
+    "\n",
+    "perm = np.random.permutation(X.shape[0])\n",
+    "X = X[perm, :]\n",
+    "C = C[perm, :]\n",
+    "\n",
+    "\n",
+    "def plot_circles(ax):\n",
+    "    ax.scatter(X[:, 0], X[:, 1], X[:, 2], c=C)\n",
+    "cc = CircularCoords(X, 100, prime = prime)\n",
+    "cc.plot_torii(C, coords_info=2, plots_in_one=3, lowerleft_plot=plot_circles, lowerleft_3d=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.savefig(\"3Links.svg\", bbox_inches='tight')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -111,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
