Major refactor, using inheritance to share code

--- a/notebooks/ImagePatches.ipynb
+++ b/notebooks/ImagePatches.ipynb
@@ -19,68 +19,14 @@
    "source": [
     "import numpy as np\n",
     "%matplotlib notebook\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.offsetbox import OffsetImage, AnnotationBbox\n",
     "from ripser import ripser\n",
-    "from persim import plot_diagrams as plot_dgms\n",
-    "from dreimac import ProjectiveCoords, GeometryExamples, get_greedy_perm_pc, get_csm\n",
+    "from persim import plot_diagrams\n",
+    "from dreimac import ProjectiveCoords, GeometryUtils, GeometryExamples, PlotUtils\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We now define a few functions which will help us to plot a collection of patches"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def imscatter(X, P, dim, zoom=1):\n",
-    "    \"\"\"\n",
-    "    Plot patches in specified locations in R2\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    X : ndarray (N, 2)\n",
-    "        The positions of each patch in R2\n",
-    "    P : ndarray (N, dim*dim)\n",
-    "        An array of all of the patches\n",
-    "    dim : int\n",
-    "        The dimension of each patch\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    #https://stackoverflow.com/questions/22566284/matplotlib-how-to-plot-images-instead-of-points\n",
-    "    ax = plt.gca()\n",
-    "    for i in range(P.shape[0]):\n",
-    "        patch = np.reshape(P[i, :], (dim, dim))\n",
-    "        x, y = X[i, :]\n",
-    "        im = OffsetImage(patch, zoom=zoom, cmap = 'gray')\n",
-    "        ab = AnnotationBbox(im, (x, y), xycoords='data', frameon=False)\n",
-    "        ax.add_artist(ab)\n",
-    "    ax.update_datalim(X)\n",
-    "    ax.autoscale()\n",
-    "    ax.set_xticks([])\n",
-    "    ax.set_yticks([])\n",
-    "\n",
-    "def plot_patches(P, zoom = 1):\n",
-    "    \"\"\"\n",
-    "    Plot patches in a best fitting rectangular grid\n",
-    "    \"\"\"\n",
-    "    N = P.shape[0]\n",
-    "    d = int(np.sqrt(P.shape[1]))\n",
-    "    dgrid = int(np.ceil(np.sqrt(N)))\n",
-    "    ex = np.arange(dgrid)\n",
-    "    x, y = np.meshgrid(ex, ex)\n",
-    "    X = np.zeros((N, 2))\n",
-    "    X[:, 0] = x.flatten()[0:N]\n",
-    "    X[:, 1] = y.flatten()[0:N]\n",
-    "    imscatter(X, P, d, zoom)"
    ]
   },
   {
@@ -94,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -1083,7 +1029,7 @@
    "source": [
     "P = GeometryExamples.line_patches(dim=10, n_angles=16, n_offsets=16, sigma=0.25)\n",
     "plt.figure(figsize=(8, 8))\n",
-    "plot_patches(P, zoom=2)\n",
+    "PlotUtils.plot_patches(P, zoom=2)\n",
     "ax = plt.gca()\n",
     "ax.set_facecolor((0.7, 0.7, 0.7))\n",
     "plt.show()"
@@ -1098,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2087,10 +2033,10 @@
     "dgmsz3 = ripser(P, coeff=3, maxdim=2)['dgms']\n",
     "plt.figure(figsize=(8, 4))\n",
     "plt.subplot(121)\n",
-    "plot_dgms(dgmsz2)\n",
+    "plot_diagrams(dgmsz2)\n",
     "plt.title(\"$\\mathbb{Z}/2$\")\n",
     "plt.subplot(122)\n",
-    "plot_dgms(dgmsz3)\n",
+    "plot_diagrams(dgmsz3)\n",
     "plt.title(\"$\\mathbb{Z}/3$\")\n",
     "plt.show()"
    ]
@@ -2104,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -2113,9 +2059,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max persistence index 0, peristence 3.0647263526916504\n"
+      "Persistence at index 0: 3.0647263526916504\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "P = GeometryExamples.line_patches(dim=10, n_angles=200, n_offsets=200, sigma=0.25)\n",
+    "proj = ProjectiveCoords(P, n_landmarks=200)\n",
+    "h1 = proj.dgms_[1]\n",
+    "# Use the index with greatest persistence in H1 and use\n",
+    "# the cocycle corresponding to that\n",
+    "idx = 0\n",
+    "print(\"Persistence at index {}: {}\".format(idx, h1[idx, 1]-h1[idx, 0]))\n",
+    "res = proj.get_coordinates(proj_dim=2, perc=0.9, cocycle_idx=[idx])\n",
+    "X = res['X']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "application/javascript": [
@@ -3098,31 +3062,13 @@
     }
    ],
    "source": [
-    "def plotProjBoundary():\n",
-    "    t = np.linspace(0, 2*np.pi, 200)\n",
-    "    plt.plot(np.cos(t), np.sin(t), 'c')\n",
-    "    plt.axis('equal')\n",
-    "    ax = plt.gca()\n",
-    "    ax.arrow(-0.1, 1, 0.001, 0, head_width = 0.15, head_length = 0.2, fc = 'c', ec = 'c', width = 0)\n",
-    "    ax.arrow(0.1, -1, -0.001, 0, head_width = 0.15, head_length = 0.2, fc = 'c', ec = 'c', width = 0)\n",
-    "    ax.set_facecolor((0.35, 0.35, 0.35))\n",
-    "\n",
-    "P = GeometryExamples.line_patches(dim=10, n_angles=200, n_offsets=200, sigma=0.25)\n",
-    "proj = ProjectiveCoords(P, n_landmarks=200)\n",
-    "h1 = proj.dgms_[1]\n",
-    "# Find the index with greatest persistence in H1 and use\n",
-    "# the cocycle corresponding to that\n",
-    "idx = np.argmax(h1[:, 1]-h1[:, 0])\n",
-    "print(\"Max persistence index {}, peristence {}\".format(idx, h1[idx, 1]-h1[idx, 0]))\n",
-    "res = proj.get_coordinates(proj_dim=2, perc=0.9, cocycle_idx=[idx])\n",
-    "X = res['X']\n",
-    "idx = get_greedy_perm_pc(X, 400)['perm']\n",
+    "idx = GeometryUtils.get_greedy_perm_pc(X, 400)['perm']\n",
     "SFinal = ProjectiveCoords.get_stereo_proj_codim1(X[idx, :])\n",
     "P = P[idx, :]\n",
     "\n",
     "plt.figure(figsize=(8, 8))\n",
-    "imscatter(SFinal, P, 10)\n",
-    "plotProjBoundary()\n",
+    "PlotUtils.imscatter(SFinal, P, 10)\n",
+    "PlotUtils.plot_proj_boundary()\n",
     "plt.show()"
    ]
   },
