test: minimal tests for current coordinates (#4)

--- a/notebooks/Trefoil.ipynb
+++ b/notebooks/Trefoil.ipynb
@@ -68,7 +68,9 @@
        "<Figure size 2000x200 with 1 Axes>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "needs_background": "light"
+     },
      "output_type": "display_data"
     }
    ],
