docs: various improvements and new example notebooks (#9)
* improve readme example and plot

* update figure in readme

* download coil data on the fly

* standardize genus two surface notebook plots by adding center circular coordinates function

* add notebook describing n_landmarks and cocycle_idx

* turn trefoil notebook into parameter_perc notebook

* add notebook about parameters prime and check_cocycle_condition

* give more descriptive tite to notebooks

* remove numba from setup.py

* reflect change in parameter name in tests

* don't use custom plotting function and call matplotlib explicitly

* add title to bullseye plots

* clean projective coordinates notebook

* update readme and docs index

--- a/notebooks/ImagePatches.ipynb
+++ b/notebooks/ImagePatches.ipynb
@@ -1,46 +1,46 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Image Patches\n",
+    "# Real projective coordinates on data set of image patches\n",
     "\n",
-    "In this module, we will explore the topology of different collections of image patches capturing line segments, which, as we will show using persistent homology and projective coordinates, concentrate on the projective plane $RP^2$.  Each image patch is a square $d \\times d$ region of pixels.  Each pixel can be thought of as a dimension, so each patch lives in $\\mathbb{R}^{d \\times d}$, and a collection of patches can be thought of as a Euclidean point cloud in $\\mathbb{R}^{d \\times d}$\n",
-    "\n",
-    "First, we perform all of the necessary library imports.  "
+    "In this example, we explore the topology of a collection of image patches capturing line segments, which, as we will show using persistent homology and projective coordinates, are parametrized by the projective plane $RP^2$.\n",
+    "Each image patch is a square $d \\times d$ region of pixels.\n",
+    "Each pixel can be thought of as a dimension, so each patch lives in $\\mathbb{R}^{d \\times d}$, and a collection of patches can be thought of as a Euclidean point cloud in $\\mathbb{R}^{d \\times d}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from ripser import ripser\n",
     "from persim import plot_diagrams\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "from dreimac import ProjectiveCoords, GeometryUtils, GeometryExamples, PlotUtils\n",
     "\n",
-    "from dreimac import ProjectiveCoords, GeometryUtils, GeometryExamples, PlotUtils"
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Oriented Line Segments\n",
-    "\n",
-    "We now examine the collection of patches which hold oriented, slightly blurry line segments that are varying distances from the center of the patch.  First, let's start by setting up the patches.  Below, the \"dim\" variable sets the patch resolution, and the \"sigma\" variable sets the blurriness (a larger sigma means blurrier line segments). "
+    "We now examine the collection of patches which hold oriented, slightly blurry line segments at varying distances from the center of the patch.\n",
+    "We start by considering a small sample of these patches.\n",
+    "Below, the \"dim\" variable sets the patch resolution, and the \"sigma\" variable sets the blurriness (a larger sigma means blurrier line segments). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -57,24 +57,24 @@
     }
    ],
    "source": [
-    "P = GeometryExamples.line_patches(dim=10, n_angles=16, n_offsets=16, sigma=0.25)\n",
+    "small_sample = GeometryExamples.line_patches(dim=10, n_angles=16, n_offsets=16, sigma=0.25)\n",
+    "\n",
     "plt.figure(figsize=(8, 8))\n",
-    "PlotUtils.plot_patches(P, zoom=2)\n",
-    "ax = plt.gca()\n",
-    "ax.set_facecolor((0.7, 0.7, 0.7))\n",
-    "plt.show()"
+    "PlotUtils.plot_patches(small_sample, zoom=2)\n",
+    "plt.gca().set_facecolor((0.7, 0.7, 0.7))"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's compute persistence diagrams for this collection of patches.  This time, we will compute with both $\\mathbb{Z}/2$ coefficients and $\\mathbb{Z}/3$ coefficients up to H2."
+    "Now let's compute persistence diagrams for this collection of patches with both $\\mathbb{Z}/2$ coefficients and $\\mathbb{Z}/3$ coefficients up to $H_2$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -84,27 +84,25 @@
        "<Figure size 800x400 with 2 Axes>"
       ]
      },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
-    "dgmsz2 = ripser(P, coeff=2, maxdim=2)['dgms']\n",
-    "dgmsz3 = ripser(P, coeff=3, maxdim=2)['dgms']\n",
     "plt.figure(figsize=(8, 4))\n",
-    "plt.subplot(121)\n",
-    "plot_diagrams(dgmsz2)\n",
-    "plt.title(\"$\\mathbb{Z}/2$\")\n",
-    "plt.subplot(122)\n",
-    "plot_diagrams(dgmsz3)\n",
-    "plt.title(\"$\\mathbb{Z}/3$\")\n",
-    "plt.show()"
+    "for i,prime in enumerate([2,3]):\n",
+    "    pd = ripser(small_sample, coeff=prime, maxdim=2)['dgms']\n",
+    "    plt.subplot(1,2,i+1) ; plot_diagrams(pd) ; _ = plt.title(\"$\\mathbb{Z}/\" + str(prime) + \"$\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice how there is one higher persistence dot both for H1 and H2, which both go away when switching to $\\mathbb{Z} / 3\\mathbb{Z}$.  This is the signature of the projective plane!  To verify this, we will now look at these patches using \"projective coordinates\" (finding a map to $RP^2$).\n"
+    "There are two high-persistence classes in the persistence diagram with $\\mathbb{Z}/2\\mathbb{Z}$ coefficients that do not show up in the persistence diagram with $\\mathbb{Z} / 3\\mathbb{Z}$ coefficients.\n",
+    "This is the signature of the projective plane $RP^2$.\n",
+    "To verify this, we will map these patches to $RP^2$ using real projective coordinates."
    ]
   },
   {
@@ -113,25 +111,12 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Persistence at index 0: 3.0647263526916504\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "P = GeometryExamples.line_patches(dim=10, n_angles=200, n_offsets=200, sigma=0.25)\n",
-    "proj = ProjectiveCoords(P, n_landmarks=200)\n",
-    "h1 = proj.dgms_[1]\n",
-    "# Use the index with greatest persistence in H1 and use\n",
-    "# the cocycle corresponding to that\n",
-    "idx = 0\n",
-    "print(\"Persistence at index {}: {}\".format(idx, h1[idx, 1]-h1[idx, 0]))\n",
-    "res = proj.get_coordinates(proj_dim=2, perc=0.8, cocycle_idx=idx)\n",
-    "X = res['X']"
+    "X = GeometryExamples.line_patches(dim=10, n_angles=200, n_offsets=200, sigma=0.25)\n",
+    "proj = ProjectiveCoords(X, n_landmarks=200)\n",
+    "res = proj.get_coordinates(proj_dim=2, perc=0.8, cocycle_idx=0)\n",
+    "proj_coords = res['X']"
    ]
   },
   {
@@ -151,13 +136,12 @@
     }
    ],
    "source": [
-    "idx = GeometryUtils.get_greedy_perm_pc(X, 400)['perm']\n",
-    "SFinal = ProjectiveCoords.get_stereo_proj_codim1(X[idx, :])\n",
+    "subsample = GeometryUtils.get_greedy_perm_pc(proj_coords, 400)['perm']\n",
+    "stereo_projection_dim_red_subsample = ProjectiveCoords.get_stereo_proj_codim1(proj_coords[subsample, :])\n",
     "\n",
     "plt.figure(figsize=(8, 8))\n",
-    "PlotUtils.imscatter(SFinal, P[idx, :], 10)\n",
-    "PlotUtils.plot_proj_boundary()\n",
-    "plt.show()"
+    "PlotUtils.imscatter(stereo_projection_dim_red_subsample, X[subsample, :], 10)\n",
+    "_ = PlotUtils.plot_proj_boundary()"
    ]
   }
  ],
