docs: improve exposition in notebooks

--- a/notebooks/parameter_perc.ipynb
+++ b/notebooks/parameter_perc.ipynb
@@ -8,7 +8,7 @@
     "# Choosing the parameter <tt>perc</tt>\n",
     "\n",
     "The purpose of this example is to demonstrate the effect of different choices of the <tt>perc</tt> parameter.\n",
-    "Roughly speaking, this parameter tells the algorithm at which geometric scale that data ought to be looked at when constructing the cohomological coordinates."
+    "Roughly speaking, this parameter tells the algorithm at which geometric scale that data should be looked at when constructing the cohomological coordinates."
    ]
   },
   {
@@ -27,17 +27,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data consists of a trefoil knot in $\\mathbb{R}^3$. As such, the data, at a small scale, is parametrized by a circle wrapping around itself.\n",
-    "In particular, we remark that, although the $2$-dimensional projection we display here seems to have self intersections, these intersections are not present in the point cloud in $\\mathbb{R}^3$, at least when the point cloud is looked at from close enough.\n",
+    "The data consists of a trefoil knot in $\\mathbb{R}^3$.\n",
+    "As such, at a small scale, the data is parametrized by a circle wrapping around itself.\n",
+    "Keep in mind that, although the $2$-dimensional projection we display here seems to have self intersections, these intersections are not present in the point cloud in $\\mathbb{R}^3$, at least when the point cloud is looked at from close enough.\n",
     "\n",
-    "When looked from further away, though, the data stops looking like a circle wrapped around itself, and starts looking like a single circle without any wrapping.\n",
+    "When looked at from further away, though, the data stops looking like a circle wrapped around itself, and starts looking like a single circle without any wrapping.\n",
     "\n",
     "We will identify this behavior by finding two circle-valued maps using the same cohomology class, but two values of the <tt>perc </tt> parameter.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,13 +64,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The persistence diagram has one class that is more persistent than any other.\n",
+    "The persistence diagram has a single high-persistence class.\n",
     "It is this class that we use in this example."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -95,12 +96,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now choose a small and a large <tt>perc</tt> parameter and get a circle-valued representations that parametrized the small- and large-scale circularity of the data, respectively."
+    "We now choose a small and a large <tt>perc</tt> parameter and get circle-valued representations that parametrized the small and large scale circularity of the data, respectively."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
