--- a/notebooks/parameters_n_landmarks_and_cocycle_idx.ipynb
+++ b/notebooks/parameters_n_landmarks_and_cocycle_idx.ipynb
@@ -13,16 +13,16 @@
     "\n",
     "The <tt>n_landmarks</tt> parameter tells the algorithm how many points to sample from the original point cloud in order to perform the main computations.\n",
     "Sampling allows the user to run the algorithm on large datasets as long as the <tt>n_landmarks</tt> parameter is kept relatively small.\n",
-    "The choice of the parameter <tt>n_landmarks</tt> is done to strike a balance between computation time and how representative is the sample of the whole point cloud.\n",
+    "The choice of the parameter <tt>n_landmarks</tt> is done to strike a balance between computation time and how representative of the whole point cloud the sample is.\n",
     "\n",
     "\n",
     "## The <tt>cocycle_idx</tt> parameter\n",
     "\n",
-    "Once the <tt>n_landmarks</tt> parameter has been chosen and the persistent homology of the landmarks has been computed, the <tt>cocycle_idx</tt> parameter tells the algorithm what persistent cohomology class is used to build the cohomological coordinates.\n",
+    "Once the <tt>n_landmarks</tt> parameter has been chosen and the persistent homology of the landmarks has been computed, the <tt>cocycle_idx</tt> parameter tells the algorithm which persistent cohomology class is used to build the cohomological coordinates.\n",
     "Roughly speaking, short-lived classes (that is, classes represented by points close to the diagonal), represent small topological features.\n",
-    "This means that cohomological coordinates built using those classes will be constant on large portions of the point cloud, and will parametrize small topological features.\n",
-    "Conversely, long-lived classes parametrize large scale topological features.\n",
-    "One often starts by considering long-lived classes as these are easier to identify and often to interpret."
+    "This means that cohomological coordinates built using these classes will be constant on large portions of the point cloud, and will parametrize small topological features.\n",
+    "Conversely, long-lived classes represent large scale topological features.\n",
+    "The user often starts by considering long-lived classes as these are usually easier to identify and to interpret."
    ]
   },
   {
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We load a simple dataset consisting of three circles in $\\mathbb{R}^2$ of different density and different radii."
+    "We load a simple dataset consisting of three circles in $\\mathbb{R}^2$ of different radii."
    ]
   },
   {
@@ -111,6 +111,7 @@
     "We now fix <tt>n_landmarks</tt> $= 100$ and focus on the <tt>cocycle_idx</tt> parameter.\n",
     "\n",
     "We display the output circular coordinates for the three clear choices for <tt>cocycle_idx</tt>: the most persistent class (<tt>cocycle_idx</tt> $=0$), the second most persistent class (<tt>cocycle_idx</tt> $=1$), and the third most persistent class (<tt>cocycle_idx</tt> $=2$).\n",
+    "DREiMac always indexes classes by their persistence, from most persistent to less persistent.\n",
     "\n",
     "We see that, in this case, the circular coordinates given by the algorithm reflect precisely the three circular features we see by directly looking at the data."
    ]
