--- a/notebooks/parameters_prime_and_check_cocycle_condition.ipynb
+++ b/notebooks/parameters_prime_and_check_cocycle_condition.ipynb
@@ -9,25 +9,25 @@
     "\n",
     "The purpose of this example is to demonstrate the effect of different choices of the <tt>prime</tt> parameter, and to explain why you should probably leave the default <tt>check_cocycle_condition = True</tt>.\n",
     "\n",
-    "These parameters only apply to the circular coordinates algorithm and the toroidal coordinates algorithm.\n",
+    "These parameters only apply to the circular and the toroidal coordinates algorithms.\n",
     "\n",
     "## The <tt>prime</tt> parameter\n",
     "\n",
     "This parameter tells the algorithm which prime field to use when computing persistent cohomology.\n",
     "Specifically, if <tt>prime = p</tt> for $p$ a prime, the algorithm will use cohomology with coefficients in the field $\\mathbb{Z}/p\\mathbb{Z}$.\n",
     "\n",
-    "Field coefficients are required for the persistence algorithm (and to have a well-defined persistence diagram), but, once a cohomology class has been chosen, this cohomology class must be lifted to cohomology with *integer* coefficients - that is $\\mathbb{Z}$ coefficients - because of how the representability theorem of cohomology works.\n",
+    "Field coefficients are required for the persistence algorithm (and to have a well-defined persistence diagram), but, once a cohomology class has been selected using the <tt>cocycle_idx</tt> parameter, this cohomology class must be lifted to cohomology with *integer* coefficients - that is $\\mathbb{Z}$ coefficients - because of how the representability theorem of cohomology works.\n",
     "This is where the parameter <tt>check_cocycle_condition</tt> comes into play.\n",
     "\n",
     "## The <tt>check_cocycle_condition</tt> parameter\n",
     "\n",
     "The circular coordinates algorithms that appear in current published papers use a heuristic in order to lift cohomology classes from $\\mathbb{Z}/p\\mathbb{Z}$ coefficients to $\\mathbb{Z}$ coefficients.\n",
-    "This heuristic works well when the topology of the data is not too complicated, but it can fail with topologically more complex data.\n",
+    "This heuristic works well when the topology of the data is not too complicated, but it can fail when the topology of the data is more complex.\n",
     "\n",
-    "The <tt>check_cocycle_condition</tt> parameter tells the algorithm whether to check that the heuristic mentioned above worked, and, it case it didn't, to fix the lift in order to have it actually represent an integral cohomology class.\n",
+    "The <tt>check_cocycle_condition</tt> parameter tells the algorithm whether to check that the heuristic mentioned above worked, and, in case it didn't, to fix the lift in order to have it actually represent an integral cohomology class.\n",
     "\n",
-    "In general, <tt>check_cocycle_condition = False</tt> will result in less computation time but in a circule-valued map that can fail to be continuous.\n",
-    "We recommend leaving <tt>check_cocycle_condition = True</tt> unless computational time becomes an issue that cannot be overcome by, for instance, reducing <tt>n_landmarks</tt>."
+    "In general, <tt>check_cocycle_condition = False</tt> will result in less computation time but in a circle-valued map that can fail to be continuous.\n",
+    "We recommend leaving <tt>check_cocycle_condition = True</tt> unless computational time becomes an issue that cannot be overcome by, for instance, reducing the <tt>n_landmarks</tt> parameter."
    ]
   },
   {
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we know that the heuristic does not work directly at the larger scale, we suspect that the output of the algorithm will start depending on the prime being chosen.\n",
+    "Now that we know that the heuristic does not work at the larger scale, we suspect that, at this larger scale, the output of the algorithm will depend on the <tt>prime</tt> parameter.\n",
     "Here we display the output of the algorithm for a range of choices.\n",
     "We see that, in general, the larger the prime, the more complicated the cohomological coordinates."
    ]
