refactor: move projective coordinate utils to utils file, and plotting utils to new plotting_utils file. Ignore plotting utils in coveragerc.

--- a/docs/notebooks/ImagePatches.ipynb
+++ b/docs/notebooks/ImagePatches.ipynb
@@ -22,10 +22,7 @@
     "\n",
     "from ripser import ripser\n",
     "from persim import plot_diagrams\n",
-    "from dreimac import ProjectiveCoords, GeometryUtils, GeometryExamples, PlotUtils\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "from dreimac import ProjectiveCoords, GeometryUtils, GeometryExamples, PlotUtils, ProjectiveMapUtils"
    ]
   },
   {
@@ -137,7 +134,7 @@
    ],
    "source": [
     "subsample = GeometryUtils.get_greedy_perm_pc(proj_coords, 400)['perm']\n",
-    "stereo_projection_dim_red_subsample = ProjectiveCoords.get_stereo_proj_codim1(proj_coords[subsample, :])\n",
+    "stereo_projection_dim_red_subsample = ProjectiveMapUtils.get_stereo_proj_codim1(proj_coords[subsample, :])\n",
     "\n",
     "plt.figure(figsize=(8, 8))\n",
     "PlotUtils.imscatter(stereo_projection_dim_red_subsample, X[subsample, :], 10)\n",
