docs: add details to new notebooks

--- a/docs/notebooks/ImagePatches.ipynb
+++ b/docs/notebooks/ImagePatches.ipynb
@@ -22,10 +22,7 @@
     "\n",
     "from ripser import ripser\n",
     "from persim import plot_diagrams\n",
-    "from dreimac import ProjectiveCoords, GeometryUtils, GeometryExamples, PlotUtils, ProjectiveMapUtils\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "from dreimac import ProjectiveCoords, GeometryUtils, GeometryExamples, PlotUtils, ProjectiveMapUtils"
    ]
   },
   {
