--- a/docs/notebooks/MooreSpace.ipynb
+++ b/docs/notebooks/MooreSpace.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lens coordinates on Moore space $M(1, \\mathbb{Z}/3)$\n",
+    "\n",
+    "In this example, we use lens coordinates to parametrize a finite sample of the Moore space $M(1,\\mathbb{Z}/3)$, characterized by the fact that its reduce homology with coefficients in $\\mathbb{Z}$ is zero in every degree except for degree $1$, in which it is $\\mathbb{Z}/3$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +20,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Moore space $M(1,\\mathbb{Z}/3)$ can be constructed by taking a quotient of the two-dimensional unit disk $D \\subseteq \\mathbb{R}^2$, where each point in the boundary is glued to its rotation by $2\\pi/3$ radians. Here, we display a fundamental domain. We color points so that points in the boundary with the same color are close to each other.\n",
+    "In order to perform the gluing, we use a function that constructs a distance matrix implementing the gluing described above."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,8 +59,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We confirm that the sample approximates the Moore space by computing persistence homology with coefficients in $\\mathbb{Z}/2$ and $\\mathbb{Z}/3$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,8 +92,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now compute Lens coordinates and display them in the fundamental domain given by the three-dimensional disk in $\\mathbb{R}^3$.\n",
+    "The plot is easier to understand if you interact with it yourself!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87f3f6cceb2a4583a3e24465e3b32a8f",
+       "model_id": "06b6f1b5aa304065abb509d69632b356",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,7 +145,6 @@
    "source": [
     "%matplotlib widget\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "\n",
     "fig = plt.figure()\n",
     "ax = plt.axes(projection='3d')\n",
