--- a/docs/notebooks/movingDot.ipynb
+++ b/docs/notebooks/movingDot.ipynb
@@ -1,33 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 31,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Complex projective coordinates on data set of image patches\n",
+    "\n",
+    "In this example, we explore the topology of a collection of images of a moving dot, which, as we will show using persistent homology and complex projective coordinates, are parametrized by the 2-sphere.\n",
+    "Each image patch is a square $d \\times d$ region of pixels.\n",
+    "Each pixel can be thought of as a dimension, so each patch lives in $\\mathbb{R}^{d \\times d}$, and a collection of patches can be thought of as a Euclidean point cloud in $\\mathbb{R}^{d \\times d}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from dreimac import GeometryExamples, PlotUtils, ComplexProjectiveCoords, ProjectiveMapUtils, GeometryUtils\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from persim import plot_diagrams\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "from persim import plot_diagrams"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start by looking at a small sample of image patches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,8 +57,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The topology of the data is best captured by approximations of the geodesic distance. This is what the function `landmark_geodesic_distance` does."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +75,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, the data has one high-prominence 2-dimensional void."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -76,9 +100,16 @@
    ],
    "source": [
     "cpc = ComplexProjectiveCoords(dist_mat, n_landmarks=300, distance_matrix=True)\n",
-    "\n",
     "fig = plt.figure()\n",
     "plot_diagrams(cpc.dgms_)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now apply complex projective coordinates."
    ]
   },
   {
@@ -94,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +144,7 @@
     "\n",
     "plt.figure(figsize=(10, 5))\n",
     "PlotUtils.imscatter(coords_R2[subsample], P[pointcloud_permutation][subsample], 10)\n",
-    "_ = PlotUtils.plot_sphere_boundary()"
+    "_ = PlotUtils.plot_2sphere_boundary()"
    ]
   }
  ],
