fix, docs: fix missing variance in tests, clean notebooks, add complex projective on genus two surface example

--- a/docs/notebooks/ImagePatches.ipynb
+++ b/docs/notebooks/ImagePatches.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,19 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "pc = ProjectiveCoords(dist_mat, n_landmarks=300, distance_matrix=True)\n",
-    "proj_coords = pc.get_coordinates(proj_dim=2, perc=0.8, cocycle_idx=0, projective_dim_red_mode=\"exponential\")"
+    "proj_coords = pc.get_coordinates(proj_dim=2, perc=0.8, cocycle_idx=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
