--- a/docs/notebooks/movingDot.ipynb
+++ b/docs/notebooks/movingDot.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coords = cpc.get_coordinates(perc=0.9, proj_dim=1, cocycle_idx=0, projective_dim_red_mode=\"exponential\")\n",
+    "coords = cpc.get_coordinates(perc=0.9, proj_dim=1, cocycle_idx=0)\n",
     "coords_R3 = ProjectiveMapUtils.hopf_map(coords)\n",
     "coords_R2 = ProjectiveMapUtils.stereographic_projection_hemispheres(coords_R3)"
    ]
