--- a/docs/notebooks/circleLensCoordinates.ipynb
+++ b/docs/notebooks/circleLensCoordinates.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "X = GeometryExamples.noisy_circle(500)\n",
     "lc = LensCoords(X, n_landmarks=50)\n",
-    "coords = lc.get_coordinates(perc=0.9, lens_dim=2, cocycle_idx=0, projective_dim_red_mode=\"exponential\")\n",
+    "coords = lc.get_coordinates(perc=0.9, lens_dim=2, cocycle_idx=0)\n",
     "coords_R3 = LensMapUtils.lens_3D_to_disk_3D(coords, 3)"
    ]
   },
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bea76a8659274f9dad6ad623c501b463",
+       "model_id": "de817edbd6a747818f6cb158e177e2b3",
        "version_major": 2,
        "version_minor": 0
       },
